2014-09-28         Arnold D. Robbins     <arnold@skeeve.com>

	* command.y (cmdtab): Add "where" as an alias for "backtrace".
	Finally!

	Unrelated:

	* dfa.c: Sync with GNU grep.

2014-09-27         Arnold D. Robbins     <arnold@skeeve.com>

	* awkgram.y (check_for_bad): Bitwise-and the bad character with 0xFF
	to avoid sign extension into a large integer.

	Unrelated:

	* configure.ac: Add an option to enable locale letters in identifiers.
	Undocumented and subject to being rescinded at any time in the future.
	* NEWS: Mention to look at configure --help.

	Unrelated:

	* profile.c (pprint): Use "rule(s)" instead of "block(s)" in the
	header.

2014-09-23         Arnold D. Robbins     <arnold@skeeve.com>

	* awkgram.y (yylex): Don't check for junk characters inside
	quoted strings.  Caused issues on DJGPP and Solaris.

	Unrelated:

	* io.c (devopen): Straighten things out with respect to
	compatibility with BWK awk.

2014-09-19         Arnold D. Robbins     <arnold@skeeve.com>

	* awkgram.y: Further commentary as to the treacherousness
	of isalnum and isalpha.

2014-09-15         Arnold D. Robbins     <arnold@skeeve.com>

	Finish removing use of isalpha and isalnum.

	* awk.h (is_alpha, is_alnum, is_identchar): Add declarations.
	* awkgram.y (yylex): Use is_alpha.
	(is_alpha, is_alnum): New functions.
	(is_identchar): Use is_alnum.
	* builtin.c (r_format_tree): Use is_alpha, is_alnum.
	* command.y (yylex): Use is_alpha, is_identchar.
	* ext.c (is_letter): Use is_alpha.
	(is_identifier_char): Removed; replaced uses with is_identchar.
	* main.c (arg_assign): Use is_alpha, is_alnum.
	* node.c (r_force_number): Use is_alpha.

2014-09-14         Arnold D. Robbins     <arnold@skeeve.com>

	* awkgram.y (is_identchar): Change from simple macro to function
	since use of isalnum() let non-ASCII letters slip through into
	identifiers.

2014-09-07         Arnold D. Robbins     <arnold@skeeve.com>

	* awk.h: Move libsigsegv stuff to ...