@@ -15,6 +15,7 @@ try_modify_environ: set_array_element of ENVIRON failed
 try_modify_environ: marking element "testext" for deletion
 try_del_environ() could not delete element - pass
 try_del_environ() could not add an element - pass
+var_test: sym_lookup of PROCINFO passed - did not get a value
 var_test: sym_lookup of ARGC passed - got a value!
 var_test: sym_update of ARGC failed - correctly
 var_test: sym_update("testvar") succeeded
