@@ -1,3 +1,8 @@
+2014-09-29         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* filefuncs.c: Minor edits to sync with documentation.
+	* testext.c: Add test to get PROCINFO, expected to fail.
+
 2014-08-12         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* Makefile.am (RM): Define for makes that don't have it,
