@@ -1,3 +1,7 @@
+2014-09-29         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* testext.ok: Adjusted after minor code change.
+
 2014-09-27         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* profile2.ok, profile3.ok, profile4.ok, profile5.ok:
