@@ -1,3 +1,8 @@
+2014-09-29         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* gawkapi.h: Minor edits to sync with documentation. Does not
+	influence the behavior of the API.
+
 2014-09-28         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* command.y (cmdtab): Add "where" as an alias for "backtrace".
